--- a/plugin.xml
+++ b/plugin.xml
@@ -24,13 +24,9 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/*">
-            <uses-sdk android:minSdkVersion="19" android:maxSdkVersion="28" />
             <uses-permission android:name="android.permission.WAKE_LOCK" />
             <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-            <uses-permission android:name="android.permission.USB_PERMISSION" />
-            <uses-permission android:name="android.permission.USE_FINGERPRINT" />
-            <uses-permission android:name="android.permission.USE_BIOMETRIC" />
 
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
@@ -38,6 +34,20 @@
             <meta-data android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" android:resource="@xml/device_filter" />
         </config-file>
 
+        <edit-config file="AndroidManifest.xml" target="/manifest/uses-sdk" mode="merge">
+            <uses-sdk android:minSdkVersion="19" android:maxSdkVersion="28" />
+        </edit-config>
+        <edit-config file="AndroidManifest.xml" target="/*">
+            <activity android:name="MainActivity">
+                <intent-filter>
+                    <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+                </intent-filter>
+                <meta-data android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </activity>
+            <uses-permission android:name="android.permission.USB_PERMISSION" />
+            <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+            <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+        </edit-config>
         <source-file src="src/android/EntelPlugin.java" target-dir="src/pt/wingman/entel/plugin" />
         <source-file src="src/android/definitions/FingerStatus.java" target-dir="src/pt/wingman/entel/plugin/definitions" />
         <source-file src="src/android/definitions/FingerprintError.java" target-dir="src/pt/wingman/entel/plugin/definitions" />
